en/1.58/_sources/reference/generators/compiler_args.rst.txt
.. spelling::

  Wl
  Zi


.. _compiler_args_generator:

compiler_args
=============

.. warning::

    This is a **deprecated** feature. Please refer to the :ref:`Migration Guidelines<conan2_migration_guide>`
    to find the feature that replaced this one.

.. container:: out_reference_box

    This is the reference page for ``compiler_args`` generator.
    Go to :ref:`Integrations/Compilers on command line<gcc_integration>` if you want to learn how to integrate your project calling
    your compiler in the command line.

Generates a file named *conanbuildinfo.args* containing a command line parameters to invoke ``gcc``, ``clang`` or ``cl`` compiler.

You can use the ``compiler_args`` generator directly to build simple programs:

**gcc/clang**:

.. code-block:: bash

    > g++ timer.cpp @conanbuildinfo.args -o bin/timer

**cl**:

.. code-block:: bash

    $ cl /EHsc timer.cpp @conanbuildinfo.args

With gcc or clang
-----------------

+--------------------------------+----------------------------------------------------------------------+
| FLAG                           | MEANING                                                              |
+================================+======================================================================+
| -DXXX                          | Corresponding to requirements `defines`                              |
+--------------------------------+----------------------------------------------------------------------+
| -IXXX                          | Corresponding to requirements `include dirs`                         |
+--------------------------------+----------------------------------------------------------------------+
| -Wl,-rpathXXX                  | Corresponding to requirements `lib dirs`                             |
+--------------------------------+----------------------------------------------------------------------+
| -LXXX                          | Corresponding to requirements `lib dirs`                             |
+--------------------------------+----------------------------------------------------------------------+
| -lXXX                          | Corresponding to requirements `libs` and `system_libs`               |
+--------------------------------+----------------------------------------------------------------------+
| -m64                           | For x86_64 architecture                                              |
+--------------------------------+----------------------------------------------------------------------+
| -m32                           | For x86 architecture                                                 |
+--------------------------------+----------------------------------------------------------------------+
| -DNDEBUG                       | For Release builds                                                   |
+--------------------------------+----------------------------------------------------------------------+
| -s                             | For Release builds (only gcc)                                        |
+--------------------------------+----------------------------------------------------------------------+
| -g                             | For Debug builds                                                     |
+--------------------------------+----------------------------------------------------------------------+
| -D_GLIBCXX_USE_CXX11_ABI=0     | When setting libcxx == "libstdc++"                                   |
+--------------------------------+----------------------------------------------------------------------+
| -D_GLIBCXX_USE_CXX11_ABI=1     | When setting libcxx == "libstdc++11"                                 |
+--------------------------------+----------------------------------------------------------------------+
| -framework XXX                 | Corresponding to requirements `frameworks` (OSX)                     |
+--------------------------------+----------------------------------------------------------------------+
| -F XXX                         | Corresponding to requirements `framework dirs` (OSX)                 |
+--------------------------------+----------------------------------------------------------------------+
| Other flags                    | cxxflags, cflags, sharedlinkflags, exelinkflags (applied directly)   |
+--------------------------------+----------------------------------------------------------------------+


With cl (Visual Studio)
-----------------------

+--------------------------------+----------------------------------------------------------------------+
| FLAG                           | MEANING                                                              |
+================================+======================================================================+
| /DXXX                          | Corresponding to requirements `defines`                              |
+--------------------------------+----------------------------------------------------------------------+
| /IXXX                          | Corresponding to requirements `include dirs`                         |
+--------------------------------+----------------------------------------------------------------------+
| /LIBPATH:XX                    | Corresponding to requirements `lib dirs`                             |
+--------------------------------+----------------------------------------------------------------------+
| /MT, /MTd, /MD, /MDd           | Corresponding to Runtime                                             |
+--------------------------------+----------------------------------------------------------------------+
| -DNDEBUG                       | For Release builds                                                   |
+--------------------------------+----------------------------------------------------------------------+
| /Zi                            | For Debug builds                                                     |
+--------------------------------+----------------------------------------------------------------------+

Directly inside a recipe
------------------------

.. code-block:: python
   :emphasize-lines: 11

    from conans import ConanFile

    class PocoTimerConan(ConanFile):
        settings = "os", "compiler", "build_type", "arch"
        requires = "poco/1.9.4"
        generators = "compiler_args"
        default_options = {"poco:shared": True, "openssl:shared": True}

        def build(self):
            self.run("mkdir -p bin")
            command = 'g++ timer.cpp @conanbuildinfo.args -o bin/timer'
            self.run(command)
